# micro-blog

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: backend.dockerfile
backend/app/: .env.example  alembic.ini  config.py  database.py  main.py  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2023_05_06_create_user_and_post_tables_92676a588f53.py
backend/app/scripts/: start-dev.sh  start-prod.sh  start.sh
backend/app/src/: config.py  database.py  main.py
backend/app/src/auth/: models.py
backend/app/src/db/: base.py  base_class.py  session.py
backend/app/src/posts/: models.py
